@@ -178,7 +178,7 @@ We typically alias `build/quick/bin/scalac -d sandbox` to `qsc` and `build/quick
 Note: on most machines this requires more heap than is allocate by default.  You can adjust the parameters with ANT_OPTS. Example command line:
 
 ```
-ANT_OPTS = "-Xms512M -Xmx2048M -Xss1M -XX:MaxPermSize=128M" ant docs
+ANT_OPTS = "-Xms512M -Xmx2048M -Xss1M" ant docs
 ```
 
   - `ant dist` builds a distribution in 'dists/latest'.
